--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <strong>Account:</strong>
-  <%= @post.account %>
+  <%= @post.account.user.email %>
 </p>
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
